[package]
name = "pdudaemon-client"
version = "0.1.1"
edition = "2021"
authors = ["Sjoerd Simons <sjoerd@collabora.com>"]
license = "MIT OR Apache-2.0"
description = "pdudaemon client"
homepage = "https://github.com/sjoerdsimons/pdudaemon-client"
repository = "https://github.com/sjoerdsimons/pdudaemon-client"
readme = "README.md"

[dependencies]
reqwest = { version = "0.12", default-features = false }
thiserror = "1.0.40"
url = "2.4.1"

[features]
default = [ "reqwest/default" ]

[dev-dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
tokio = { version = "1.30.0", features = ["full"] }
